# DeformableHeart

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Dependancies/eigen3/: CMakeLists.txt
Dependancies/glad/: CMakeLists.txt
Dependancies/glad/include/glad/: glad.h
Dependancies/glad/src/: glad.c
Prototype/constraint_deformation/: demo.js  index.html
Resources/: Heart_Final_Flat.mtl  Heart_Final_Flat_Source.txt  citations.txt  fragSolid.glsl  fragment.glsl  heart_icon.icns  res.rc  vertex.glsl  vertexPoints.glsl
Source/: CMakeLists.txt  DefoHeart.cc  DefoHeart.hpp  HeartMesh.cc  HeartMesh.hpp  main.cc
Source/acm/: CMakeLists.txt  acm.cc  acm.hpp
Source/interaction/: CMakeLists.txt  rayselector.cc  rayselector.hpp  trackball.cc  trackball.hpp
Source/mesh_processing/: CMakeLists.txt  deformation.cc  deformation.hpp  loop.cc  loop.hpp  loop_acm.cc  loop_acm.hpp
Source/render_core/: CMakeLists.txt  app.cc  app.hpp  shader.cc  shader.hpp
Source/system/: DefoHeart.cc  DefoHeart.hpp  app.cc
Source/tests/: CMakeLists.txt  render_core_test.cc  utilities_test.cc
Source/trackball/: CMakeLists.txt  trackball.cc  trackball.hpp
Source/utilities/: CMakeLists.txt  polyroots.cc  utilities.cc  utilities.hpp
